--- a/src/eduverse-backend/.env
+++ b/src/eduverse-backend/.env
@@ -4,8 +4,8 @@ PORT=5000
 # Database configuration
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=24072004
-DB_NAME=db_eduverse
+DB_PASSWORD=Group12
+DB_NAME= db_eduverse
 
 # JWT configuration
 JWT_SECRET=your_jwt_secret
