--- a/src/eduverse-backend/.env
+++ b/src/eduverse-backend/.env
@@ -4,7 +4,7 @@ PORT=5000
 # Database configuration
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=Group12
+DB_PASSWORD=07052004
 DB_NAME= db_eduverse
 
 # JWT configuration
