--- a/src/eduverse-backend/package.json
+++ b/src/eduverse-backend/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "eduverse-backend": "file:",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
