--- a/src/eduverse-backend/.env
+++ b/src/eduverse-backend/.env
@@ -4,17 +4,16 @@ PORT=5000
 # Database configuration
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=Group12
-DB_NAME=eduverse_db
+DB_PASSWORD=
+DB_NAME=
 
 # JWT configuration
-JWT_SECRET=your_jwt_secret
+JWT_SECRET=
 JWT_EXPIRES_IN=1h
 
 # Email configuration
-EMAIL_SERVICE=gmail
-EMAIL_USERNAME=your_email@gmail.com
-EMAIL_PASSWORD=your_email_password
+EMAIL_USER=
+EMAIL_PASSWORD=
 
 # OTP configuration
 OTP_EXPIRES_IN=10m
@@ -23,6 +22,6 @@ OTP_EXPIRES_IN=10m
 FRONTEND_URL=http://localhost:3000
 
 # Cloudinary configuration
-CLOUDINARY_CLOUD_NAME=dxd2vgt0m
-CLOUDINARY_API_KEY=466541888921969
-CLOUDINARY_API_SECRET=4tDotfiPkZeE8gW3AU83RSMFStk
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
