--- a/src/eduverse-backend/.env
+++ b/src/eduverse-backend/.env
@@ -4,8 +4,8 @@ PORT=5000
 # Database configuration
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=
-DB_NAME=
+DB_PASSWORD=07052004
+DB_NAME=eduverse_db
 
 # JWT configuration
 JWT_SECRET=
