--- a/src/eduverse-backend/.env
+++ b/src/eduverse-backend/.env
@@ -21,6 +21,6 @@ OTP_EXPIRES_IN=10m
 FRONTEND_URL=http://localhost:3000
 
 # Cloudinary configuration
-CLOUDINARY_CLOUD_NAME=
-CLOUDINARY_API_KEY=
-CLOUDINARY_API_SECRET=
+CLOUDINARY_CLOUD_NAME=dxd2vgt0m
+CLOUDINARY_API_KEY=466541888921969
+CLOUDINARY_API_SECRET=4tDotfiPkZeE8gW3AU83RSMFStk
