--- a/src/eduverse-backend/.env
+++ b/src/eduverse-backend/.env
@@ -12,8 +12,8 @@ JWT_SECRET=
 JWT_EXPIRES_IN=1h
 
 # Email configuration
-EMAIL_USER=project.hust.67@gmail.com
-EMAIL_PASSWORD=pjoj ktay knbi yzfr
+EMAIL_USER=
+EMAIL_PASSWORD=
 
 # OTP configuration
 OTP_EXPIRES_IN=10m
@@ -22,6 +22,6 @@ OTP_EXPIRES_IN=10m
 FRONTEND_URL=http://localhost:3000
 
 # Cloudinary configuration
-CLOUDINARY_CLOUD_NAME=dxd2vgt0m
-CLOUDINARY_API_KEY=466541888921969
-CLOUDINARY_API_SECRET=4tDotfiPkZeE8gW3AU83RSMFStk
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
