--- a/src/eduverse-backend/.env
+++ b/src/eduverse-backend/.env
@@ -4,8 +4,8 @@ PORT=5000
 # Database configuration
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=
-DB_NAME=eduverse_db
+DB_PASSWORD=Duongngu123
+DB_NAME=DUONGngu123
 
 # JWT configuration
 JWT_SECRET=
@@ -22,6 +22,6 @@ OTP_EXPIRES_IN=10m
 FRONTEND_URL=http://localhost:3000
 
 # Cloudinary configuration
-CLOUDINARY_CLOUD_NAME=
-CLOUDINARY_API_KEY=
-CLOUDINARY_API_SECRET=
+CLOUDINARY_CLOUD_NAME=dxd2vgt0m
+CLOUDINARY_API_KEY=466541888921969
+CLOUDINARY_API_SECRET=4tDotfiPkZeE8gW3AU83RSMFStk
